# gridfm-datakit

./: 404.html  SECURITY.md  index.html  objects.inv  pyproject.toml
components/admittance_perturbation/: index.html
components/cli/: index.html
components/generate/: index.html
components/generator_perturbation/: index.html
components/load/: index.html
components/network/: index.html
components/param_handler/: index.html
components/power_balance/: index.html
components/process_network/: index.html
components/save/: index.html
components/solvers/: index.html
components/stats/: index.html
components/topology/: index.html
components/utils/: index.html
components/validation/: index.html
docs/improvements/: gridfm-datakit-review.md
gridfm_datakit/: __init__.py  generate.py  network.py  validation.py
gridfm_datakit/dynamic/: __init__.py  generate_dynamic.py  process_dynamic.py
gridfm_datakit/powsybl/: __init__.py  api.py  convert.py  mapping.py  preprocess.py  preprocess_pf_res.py
gridfm_datakit/process/: process_network.py
improvements/gridfm-datakit-review/: index.html
installation/: index.html
manual/admittance_perturbations/: index.html
manual/generation_perturbations/: index.html
manual/getting_started/: index.html
manual/load_scenarios/: index.html
manual/network/: index.html
manual/outputs/: index.html
manual/topology_perturbations/: index.html
scripts/config/: Texas2k_case1_2016summerpeak.yaml  default.yaml
search/: search_index.json
tests/: test_generate.py
tests/config/: consistency_test.yaml  default_opf_mode_test.yaml  default_pf_mode_test.yaml  default_without_perturbation_test.yaml
tests/dynamic/: conftest.py  test_compute_balanced_static_state.py  test_dynawo_mappings.py  test_generate_dynamic.py  test_load_raw_inputs.py  test_optional_import.py  test_output_format.py  test_process_dynamic.py  test_run_dynawo_simulation.py
tests/dynawo/: conftest.py  test_dynawo_mapping.py  test_dynawo_simulate.py  (+1 more)
(+23 files in other folders)
